--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
- <link href="https://fonts.googleapis.com/css?family=Poppins:400,900&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -55,11 +55,11 @@
       <path d="M1336.44,146.46,1280,178.87s-57.48,38.72-64.11,47.41S1198.2,287.92,1196,295s-6.63,20.55-25,35.56-81.06,94-94.33,110.63-37.58,54.52-85.48,75.07S919.65,551.85,899,521s-23.58-43.48-94.32-66.38c-39.06-12.64-45.69-3.95-55.27.79S687.53,506.81,636.68,506s-168,3.17-187.17,11.07-41.27,26.86-91.38,15-105.37-23.7-120.85-23.7-49.37,9.48-69.27,2.37-114.95-88.51-123.8-94S8.11,421.46,0,423l-60.22,17" style="fill: none;stroke: blue;stroke-miterlimit: 10;stroke-width: 3px"/>
       <path id="1" d="M1271,225.76c0,15.29-27.69,44.25-27.69,44.25s-27.68-29-27.68-44.25a27.69,27.69,0,0,1,55.37,0Z"/>
       <path d="M1241.12,222.63H1238V218h8.59v21.15h-5.5Z" style="fill: #fff"/>
-      <path d="M1200.94,205.13c0,15.29-27.68,44.25-27.68,44.25s-27.68-29-27.68-44.25a27.68,27.68,0,1,1,55.36,0Z"/>
+      <path id="2" d="M1200.94,205.13c0,15.29-27.68,44.25-27.68,44.25s-27.68-29-27.68-44.25a27.68,27.68,0,1,1,55.36,0Z"/>
       <path d="M1181.46,218.49h-17l5.24-5.44a48.12,48.12,0,0,0,3.25-3.66,20.65,20.65,0,0,0,1.76-2.54,6.58,6.58,0,0,0,.71-1.68,4.84,4.84,0,0,0,.14-1.09,2.92,2.92,0,0,0-.15-.93,2.3,2.3,0,0,0-1.21-1.36,2.32,2.32,0,0,0-1-.21,2.17,2.17,0,0,0-1.75.73,2.69,2.69,0,0,0-.63,1.82,6.07,6.07,0,0,0,.08.9h-6a9.11,9.11,0,0,1,.6-3.37,7.55,7.55,0,0,1,4.29-4.29,9.57,9.57,0,0,1,6.56,0,7.67,7.67,0,0,1,2.6,1.57,7.17,7.17,0,0,1,1.71,2.39,7.38,7.38,0,0,1,.62,3,7,7,0,0,1-.75,3.21,11.15,11.15,0,0,1-2.37,3l-3.5,3.28h6.84Z" style="fill: #fff"/>
-      <path d="M1145.58,300.28c0,15.29-27.69,44.26-27.69,44.26s-27.68-29-27.68-44.26a27.69,27.69,0,0,1,55.37,0Z"/>
+      <path id="3" d="M1145.58,300.28c0,15.29-27.69,44.26-27.69,44.26s-27.68-29-27.68-44.26a27.69,27.69,0,0,1,55.37,0Z"/>
       <path d="M1116.67,300.75l.38,0h.27a2.34,2.34,0,0,0,1.68-.62,2.12,2.12,0,0,0,.65-1.6A2.06,2.06,0,0,0,1119,297a2.32,2.32,0,0,0-3.18.08,2.49,2.49,0,0,0-.62,1.74h-5.07a9.08,9.08,0,0,1,.82-2.94,7,7,0,0,1,1.62-2.18,6.51,6.51,0,0,1,2.3-1.34,8.66,8.66,0,0,1,2.91-.47,8.79,8.79,0,0,1,2.85.44,6.49,6.49,0,0,1,2.19,1.23,5.46,5.46,0,0,1,1.4,1.94,6.24,6.24,0,0,1,.49,2.53,4.78,4.78,0,0,1-.58,2.49,5.21,5.21,0,0,1-1.64,1.67,4.68,4.68,0,0,1,2.54,1.8,5.46,5.46,0,0,1,.91,3.22,6.58,6.58,0,0,1-.61,2.86,6.42,6.42,0,0,1-1.73,2.21,7.85,7.85,0,0,1-2.63,1.43,10.57,10.57,0,0,1-3.36.51,9.9,9.9,0,0,1-4.4-1,7.13,7.13,0,0,1-3.14-3,6.22,6.22,0,0,1-.72-1.86,9.74,9.74,0,0,1-.18-1.88h5.44a3.14,3.14,0,0,0,.87,2.26,3,3,0,0,0,2.19.77,2.67,2.67,0,0,0,2.13-.78,2.86,2.86,0,0,0,.67-1.94,2.6,2.6,0,0,0-.81-2.07,2.85,2.85,0,0,0-1.93-.7,3.12,3.12,0,0,0-.54,0l-.56.1Z" style="fill: #fff"/>
-      <path d="M1054.35,411.43c0,15.29-27.68,44.25-27.68,44.25S999,426.72,999,411.43a27.68,27.68,0,1,1,55.36,0Z"/>
+      <path id="4" d="M1054.35,411.43c0,15.29-27.68,44.25-27.68,44.25S999,426.72,999,411.43a27.68,27.68,0,1,1,55.36,0Z"/>
       <path d="M1032.77,416.24h2.55v4.21h-2.55v4.34h-5.11v-4.34h-10.2v-3.54l8.07-13.26h7.24Zm-5.11,0v-8.33l-4.85,8.33Z" style="fill: #fff"/>
       <path d="M881.34,535.16c0,15.29-27.68,44.25-27.68,44.25S826,550.45,826,535.16a27.68,27.68,0,1,1,55.36,0Z"/>
       <path d="M859.76,532h-7.32l-.37,2.33.93-.1a8.19,8.19,0,0,1,.87,0,7.85,7.85,0,0,1,3,.56,6.85,6.85,0,0,1,3.9,3.9,7.89,7.89,0,0,1,.56,3,7.28,7.28,0,0,1-.63,3.08,6.64,6.64,0,0,1-1.78,2.35,8,8,0,0,1-2.81,1.48,12.05,12.05,0,0,1-3.67.52,13.89,13.89,0,0,1-3.63-.46,11.7,11.7,0,0,1-3.24-1.42l.81-5.16a11.25,11.25,0,0,0,2.86,1.84,7,7,0,0,0,2.78.63,3.73,3.73,0,0,0,2.66-.91,3,3,0,0,0,1-2.26,3,3,0,0,0-1.32-2.54,5.73,5.73,0,0,0-3.45-1,9.55,9.55,0,0,0-2,.21,9.37,9.37,0,0,0-2,.66l1.77-11.35h11.08Z" style="fill: #fff"/>
@@ -188,23 +188,192 @@
 
 
 <div class="modal modal1 close">
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
-  <g id="Layer_1" data-name="Layer 1">
-    <rect width="667.68" height="800" style="fill: #aedcf3"/>
-    <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
-    <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
-  </g>
-</svg>
-<div class="modal__img img_1"></div>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_1"></div>
 
-<div class="modal__content">
-<h1>Modal Title</h1>
-<img src="img/wiggle.svg">
-<p>modal text</p>
+  <div class="modal__content">
+  <h1>Former Ashton Canal Warehouse</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>As we depart Portland Basin we leave what was, in the early 1800s, an important transport hub for canals converging at this point.   It was a vibrant, busy canal junction handling goods travelling between major centres of mining and cotton production.   The building, which now houses the Museum, was originally the Ashton Canal Warehouse.   The three-storey building was constructed in 1834.   The arches in the lower part of the building were shipping holes where boats could sail in to the warehouse to load and unload materials.</p>
+  </div>
 </div>
+
+
+<div class="modal modal2 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_2"></div>
+
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
 </div>
 
+<div class="modal modal3 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_3"></div>
 
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
+</div>
+
+<div class="modal modal4 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_4"></div>
+
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
+</div>
+
+<div class="modal modal5 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_5"></div>
+
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
+</div>
+
+<div class="modal modal6 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_6"></div>
+
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
+</div>
+
+<div class="modal modal7 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_7"></div>
+
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
+</div>
+
+<div class="modal modal8 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_8"></div>
+
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
+</div>
+
+<div class="modal modal9 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_9"></div>
+
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
+</div>
+
+<div class="modal modal10 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_11"></div>
+
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
+</div>
+
+<div class="modal modal12 close">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+    <g id="Layer_1" data-name="Layer 1">
+      <rect width="667.68" height="800" style="fill: #aedcf3"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+    </g>
+  </svg>
+  <div class="modal__img img_12"></div>
+
+  <div class="modal__content">
+  <h1>Prince’s Dock (former short-arm canal)</h1>
+  <img class="wiggle" src="img/wiggle.svg">
+  <p>On the left, you will see that the towpath climbs over a bridge that once spanned the entrance to a short arm running parallel with the canal.   This was Prince’s Dock, which served a small railway-canal interchange.   A single spur ran down an incline from the rail sidings to towpath level alongside the arm.   This was used for transhipping goods to and from the adjacent railway.</p>
+  </div>
+</div>
 
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
