making cross easier to click

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -209,7 +210,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -231,7 +233,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -248,7 +251,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -265,7 +269,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -282,7 +287,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -299,7 +305,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -320,7 +327,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -337,7 +345,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -354,7 +363,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -373,7 +383,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
@@ -390,7 +401,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
     <g id="Layer_1" data-name="Layer 1">
       <rect width="667.68" height="800" style="fill: #aedcf3"/>
-      <line class="cross" x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
+      <rect class="cross" x="1149.3" y="1.1" width="130.2" height="117.8" style="fill: #fff"/>
+      <line x1="1203.68" y1="43.75" x2="1233.45" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
       <line x1="1233.45" y1="43.75" x2="1203.68" y2="76.95" style="fill: none;stroke: #1d1d1b;stroke-miterlimit: 10;stroke-width: 4px"/>
     </g>
   </svg>
