adding scroll to 7

--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
   <br><br>
   Just to the left, set back from the bridge, is the site of the Moravian settlement.   The Moravian church and settlement was founded in 1785 with the opening of the chapel and choir houses.   Some 1,500 people attended that first opening church service.   During the 18th and 19th Centuries, the Moravian settlement developed into a virtually self-contained community, with most of the essential facilities in place.   Despite the many changes in the life of the Settlement over the past 200 years, the Church, with its worshipping and serving congregation, remains its focus and heart.</p>
   </div>
+  <img class="scroll" src="img/scroll.svg">
 </div>
 
 <div class="modal modal8 close">
