Jeremy bridge wording change

--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
   <div class="modal__img img_3"></div>
 
   <div class="modal__content">
-  <h1>Jenny Brook Bridge</h1>
+  <h1>Jeremy Brook Bridge</h1>
   <img class="wiggle" src="img/wiggle.svg">
-  <p>Coming up ahead, we will pass under the Jenny Brook Footbridge.   This crosses the canal at Pottinger Street and follows a line of former cotton mills.   This wrought iron bridge is interesting because of its arched lattice girder design.   A nice piece of engineering simply for pedestrians to cross the canal.</p>
+  <p>Coming up ahead, we will pass under the Jeremy Brook Footbridge.   This crosses the canal at Pottinger Street and follows a line of former cotton mills.   This wrought iron bridge is interesting because of its arched lattice girder design.   A nice piece of engineering simply for pedestrians to cross the canal.</p>
   </div>
 </div>
 
